--- a/projects/CaliforniaNews/app/templates/steps.jade
+++ b/projects/CaliforniaNews/app/templates/steps.jade
@@ -41,27 +41,12 @@ block content
                span.step--count  1
                |  of 4
             p You don't need be a designer. We've developed a wide range of blocks. Contemporary look and high flexibility makes them handy and applicable for any kind of content.
-            div.visual--steps
-                div.visual--steps-items
-                    ul.visual--indicators
-                        li
-                            div.circleAndLine
-                                div.circle.circle--active
-                                svg(width="157" height="2" viewBox="0 0 157 1" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink")
-                                    path(id="path0_stroke" d="M 0 0L 2.4375 0L 2.4375 -1L 0 -1L 0 0ZM 7.3125 0L 12.1875 0L 12.1875 -1L 7.3125 -1L 7.3125 0ZM 17.0625 0L 21.9375 0L 21.9375 -1L 17.0625 -1L 17.0625 0ZM 26.8125 0L 31.6875 0L 31.6875 -1L 26.8125 -1L 26.8125 0ZM 36.5625 0L 41.4375 0L 41.4375 -1L 36.5625 -1L 36.5625 0ZM 46.3125 0L 51.1875 0L 51.1875 -1L 46.3125 -1L 46.3125 0ZM 56.0625 0L 60.9375 0L 60.9375 -1L 56.0625 -1L 56.0625 0ZM 65.8125 0L 70.6875 0L 70.6875 -1L 65.8125 -1L 65.8125 0ZM 75.5625 0L 80.4375 0L 80.4375 -1L 75.5625 -1L 75.5625 0ZM 85.3125 0L 90.1875 0L 90.1875 -1L 85.3125 -1L 85.3125 0ZM 95.0625 0L 99.9375 0L 99.9375 -1L 95.0625 -1L 95.0625 0ZM 104.812 0L 109.688 0L 109.688 -1L 104.812 -1L 104.812 0ZM 114.562 0L 119.438 0L 119.438 -1L 114.562 -1L 114.562 0ZM 124.312 0L 129.188 0L 129.188 -1L 124.312 -1L 124.312 0ZM 134.062 0L 138.938 0L 138.938 -1L 134.062 -1L 134.062 0ZM 143.812 0L 148.688 0L 148.688 -1L 143.812 -1L 143.812 0ZM 153.562 0L 156 0L 156 -1L 153.562 -1L 153.562 0Z")
-                        li
-                            div.circleAndLine
-                                div.circle
-                                svg(width="157" height="2" viewBox="0 0 157 1" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink")
-                                    path(id="path0_stroke" d="M 0 0L 2.4375 0L 2.4375 -1L 0 -1L 0 0ZM 7.3125 0L 12.1875 0L 12.1875 -1L 7.3125 -1L 7.3125 0ZM 17.0625 0L 21.9375 0L 21.9375 -1L 17.0625 -1L 17.0625 0ZM 26.8125 0L 31.6875 0L 31.6875 -1L 26.8125 -1L 26.8125 0ZM 36.5625 0L 41.4375 0L 41.4375 -1L 36.5625 -1L 36.5625 0ZM 46.3125 0L 51.1875 0L 51.1875 -1L 46.3125 -1L 46.3125 0ZM 56.0625 0L 60.9375 0L 60.9375 -1L 56.0625 -1L 56.0625 0ZM 65.8125 0L 70.6875 0L 70.6875 -1L 65.8125 -1L 65.8125 0ZM 75.5625 0L 80.4375 0L 80.4375 -1L 75.5625 -1L 75.5625 0ZM 85.3125 0L 90.1875 0L 90.1875 -1L 85.3125 -1L 85.3125 0ZM 95.0625 0L 99.9375 0L 99.9375 -1L 95.0625 -1L 95.0625 0ZM 104.812 0L 109.688 0L 109.688 -1L 104.812 -1L 104.812 0ZM 114.562 0L 119.438 0L 119.438 -1L 114.562 -1L 114.562 0ZM 124.312 0L 129.188 0L 129.188 -1L 124.312 -1L 124.312 0ZM 134.062 0L 138.938 0L 138.938 -1L 134.062 -1L 134.062 0ZM 143.812 0L 148.688 0L 148.688 -1L 143.812 -1L 143.812 0ZM 153.562 0L 156 0L 156 -1L 153.562 -1L 153.562 0Z")
-                        li
-                            div.circleAndLine
-                                div.circle
-                                svg(width="157" height="2" viewBox="0 0 157 1" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink")
-                                    path(id="path0_stroke" d="M 0 0L 2.4375 0L 2.4375 -1L 0 -1L 0 0ZM 7.3125 0L 12.1875 0L 12.1875 -1L 7.3125 -1L 7.3125 0ZM 17.0625 0L 21.9375 0L 21.9375 -1L 17.0625 -1L 17.0625 0ZM 26.8125 0L 31.6875 0L 31.6875 -1L 26.8125 -1L 26.8125 0ZM 36.5625 0L 41.4375 0L 41.4375 -1L 36.5625 -1L 36.5625 0ZM 46.3125 0L 51.1875 0L 51.1875 -1L 46.3125 -1L 46.3125 0ZM 56.0625 0L 60.9375 0L 60.9375 -1L 56.0625 -1L 56.0625 0ZM 65.8125 0L 70.6875 0L 70.6875 -1L 65.8125 -1L 65.8125 0ZM 75.5625 0L 80.4375 0L 80.4375 -1L 75.5625 -1L 75.5625 0ZM 85.3125 0L 90.1875 0L 90.1875 -1L 85.3125 -1L 85.3125 0ZM 95.0625 0L 99.9375 0L 99.9375 -1L 95.0625 -1L 95.0625 0ZM 104.812 0L 109.688 0L 109.688 -1L 104.812 -1L 104.812 0ZM 114.562 0L 119.438 0L 119.438 -1L 114.562 -1L 114.562 0ZM 124.312 0L 129.188 0L 129.188 -1L 124.312 -1L 124.312 0ZM 134.062 0L 138.938 0L 138.938 -1L 134.062 -1L 134.062 0ZM 143.812 0L 148.688 0L 148.688 -1L 143.812 -1L 143.812 0ZM 153.562 0L 156 0L 156 -1L 153.562 -1L 153.562 0Z")
-                        li
-                            div.circleAndLine
-                                div.circle
+            div.progress--bar
+                ul
+                    li.bar--active Choose a template
+                    li Select Plugins
+                    li Authorization
+                    li Download Site
         .content.content--tehemes
             +theme-card('cover1', 'Dayli insight', 'by Yam Chhetri')
             +theme-card('cover2', 'ProfitMag', 'by Rigorous Themes')
@@ -77,27 +62,12 @@ block content
                 span.step--count  2
                 |  of 4
             p Here is a set of the most necessary plug-ins for media sites created on WordPress. Choose the right one for you.
-            div.visual--steps
-                div.visual--steps-items
-                    ul.visual--indicators
-                        li
-                            div.circleAndLine
-                                div.circle
-                                svg(width="157" height="2" viewBox="0 0 157 1" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink")
-                                    path(id="path0_stroke" d="M 0 0L 2.4375 0L 2.4375 -1L 0 -1L 0 0ZM 7.3125 0L 12.1875 0L 12.1875 -1L 7.3125 -1L 7.3125 0ZM 17.0625 0L 21.9375 0L 21.9375 -1L 17.0625 -1L 17.0625 0ZM 26.8125 0L 31.6875 0L 31.6875 -1L 26.8125 -1L 26.8125 0ZM 36.5625 0L 41.4375 0L 41.4375 -1L 36.5625 -1L 36.5625 0ZM 46.3125 0L 51.1875 0L 51.1875 -1L 46.3125 -1L 46.3125 0ZM 56.0625 0L 60.9375 0L 60.9375 -1L 56.0625 -1L 56.0625 0ZM 65.8125 0L 70.6875 0L 70.6875 -1L 65.8125 -1L 65.8125 0ZM 75.5625 0L 80.4375 0L 80.4375 -1L 75.5625 -1L 75.5625 0ZM 85.3125 0L 90.1875 0L 90.1875 -1L 85.3125 -1L 85.3125 0ZM 95.0625 0L 99.9375 0L 99.9375 -1L 95.0625 -1L 95.0625 0ZM 104.812 0L 109.688 0L 109.688 -1L 104.812 -1L 104.812 0ZM 114.562 0L 119.438 0L 119.438 -1L 114.562 -1L 114.562 0ZM 124.312 0L 129.188 0L 129.188 -1L 124.312 -1L 124.312 0ZM 134.062 0L 138.938 0L 138.938 -1L 134.062 -1L 134.062 0ZM 143.812 0L 148.688 0L 148.688 -1L 143.812 -1L 143.812 0ZM 153.562 0L 156 0L 156 -1L 153.562 -1L 153.562 0Z")
-                        li
-                            div.circleAndLine
-                                div.circle.circle--active
-                                svg(width="157" height="2" viewBox="0 0 157 1" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink")
-                                    path(id="path0_stroke" d="M 0 0L 2.4375 0L 2.4375 -1L 0 -1L 0 0ZM 7.3125 0L 12.1875 0L 12.1875 -1L 7.3125 -1L 7.3125 0ZM 17.0625 0L 21.9375 0L 21.9375 -1L 17.0625 -1L 17.0625 0ZM 26.8125 0L 31.6875 0L 31.6875 -1L 26.8125 -1L 26.8125 0ZM 36.5625 0L 41.4375 0L 41.4375 -1L 36.5625 -1L 36.5625 0ZM 46.3125 0L 51.1875 0L 51.1875 -1L 46.3125 -1L 46.3125 0ZM 56.0625 0L 60.9375 0L 60.9375 -1L 56.0625 -1L 56.0625 0ZM 65.8125 0L 70.6875 0L 70.6875 -1L 65.8125 -1L 65.8125 0ZM 75.5625 0L 80.4375 0L 80.4375 -1L 75.5625 -1L 75.5625 0ZM 85.3125 0L 90.1875 0L 90.1875 -1L 85.3125 -1L 85.3125 0ZM 95.0625 0L 99.9375 0L 99.9375 -1L 95.0625 -1L 95.0625 0ZM 104.812 0L 109.688 0L 109.688 -1L 104.812 -1L 104.812 0ZM 114.562 0L 119.438 0L 119.438 -1L 114.562 -1L 114.562 0ZM 124.312 0L 129.188 0L 129.188 -1L 124.312 -1L 124.312 0ZM 134.062 0L 138.938 0L 138.938 -1L 134.062 -1L 134.062 0ZM 143.812 0L 148.688 0L 148.688 -1L 143.812 -1L 143.812 0ZM 153.562 0L 156 0L 156 -1L 153.562 -1L 153.562 0Z")
-                        li
-                            div.circleAndLine
-                                div.circle
-                                svg(width="157" height="2" viewBox="0 0 157 1" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink")
-                                    path(id="path0_stroke" d="M 0 0L 2.4375 0L 2.4375 -1L 0 -1L 0 0ZM 7.3125 0L 12.1875 0L 12.1875 -1L 7.3125 -1L 7.3125 0ZM 17.0625 0L 21.9375 0L 21.9375 -1L 17.0625 -1L 17.0625 0ZM 26.8125 0L 31.6875 0L 31.6875 -1L 26.8125 -1L 26.8125 0ZM 36.5625 0L 41.4375 0L 41.4375 -1L 36.5625 -1L 36.5625 0ZM 46.3125 0L 51.1875 0L 51.1875 -1L 46.3125 -1L 46.3125 0ZM 56.0625 0L 60.9375 0L 60.9375 -1L 56.0625 -1L 56.0625 0ZM 65.8125 0L 70.6875 0L 70.6875 -1L 65.8125 -1L 65.8125 0ZM 75.5625 0L 80.4375 0L 80.4375 -1L 75.5625 -1L 75.5625 0ZM 85.3125 0L 90.1875 0L 90.1875 -1L 85.3125 -1L 85.3125 0ZM 95.0625 0L 99.9375 0L 99.9375 -1L 95.0625 -1L 95.0625 0ZM 104.812 0L 109.688 0L 109.688 -1L 104.812 -1L 104.812 0ZM 114.562 0L 119.438 0L 119.438 -1L 114.562 -1L 114.562 0ZM 124.312 0L 129.188 0L 129.188 -1L 124.312 -1L 124.312 0ZM 134.062 0L 138.938 0L 138.938 -1L 134.062 -1L 134.062 0ZM 143.812 0L 148.688 0L 148.688 -1L 143.812 -1L 143.812 0ZM 153.562 0L 156 0L 156 -1L 153.562 -1L 153.562 0Z")
-                        li
-                            div.circleAndLine
-                                div.circle
+            div.progress--bar
+                ul
+                    li Choose a template
+                    li.bar--active Select Plugins
+                    li Authorization
+                    li Download Site
         div.content.content--plugins
             div.plugins--container
                 div.recommended
@@ -331,27 +301,12 @@ block content
                 span.step--count  3
                 |  of 4
             p Please log in to manage the created sites or be able to connect with us.
-            div.visual--steps
-                div.visual--steps-items
-                    ul.visual--indicators
-                        li
-                            div.circleAndLine
-                                div.circle.circle--active
-                                svg(width="157" height="2" viewBox="0 0 157 1" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink")
-                                    path(id="path0_stroke" d="M 0 0L 2.4375 0L 2.4375 -1L 0 -1L 0 0ZM 7.3125 0L 12.1875 0L 12.1875 -1L 7.3125 -1L 7.3125 0ZM 17.0625 0L 21.9375 0L 21.9375 -1L 17.0625 -1L 17.0625 0ZM 26.8125 0L 31.6875 0L 31.6875 -1L 26.8125 -1L 26.8125 0ZM 36.5625 0L 41.4375 0L 41.4375 -1L 36.5625 -1L 36.5625 0ZM 46.3125 0L 51.1875 0L 51.1875 -1L 46.3125 -1L 46.3125 0ZM 56.0625 0L 60.9375 0L 60.9375 -1L 56.0625 -1L 56.0625 0ZM 65.8125 0L 70.6875 0L 70.6875 -1L 65.8125 -1L 65.8125 0ZM 75.5625 0L 80.4375 0L 80.4375 -1L 75.5625 -1L 75.5625 0ZM 85.3125 0L 90.1875 0L 90.1875 -1L 85.3125 -1L 85.3125 0ZM 95.0625 0L 99.9375 0L 99.9375 -1L 95.0625 -1L 95.0625 0ZM 104.812 0L 109.688 0L 109.688 -1L 104.812 -1L 104.812 0ZM 114.562 0L 119.438 0L 119.438 -1L 114.562 -1L 114.562 0ZM 124.312 0L 129.188 0L 129.188 -1L 124.312 -1L 124.312 0ZM 134.062 0L 138.938 0L 138.938 -1L 134.062 -1L 134.062 0ZM 143.812 0L 148.688 0L 148.688 -1L 143.812 -1L 143.812 0ZM 153.562 0L 156 0L 156 -1L 153.562 -1L 153.562 0Z")
-                        li
-                            div.circleAndLine
-                                div.circle
-                                svg(width="157" height="2" viewBox="0 0 157 1" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink")
-                                    path(id="path0_stroke" d="M 0 0L 2.4375 0L 2.4375 -1L 0 -1L 0 0ZM 7.3125 0L 12.1875 0L 12.1875 -1L 7.3125 -1L 7.3125 0ZM 17.0625 0L 21.9375 0L 21.9375 -1L 17.0625 -1L 17.0625 0ZM 26.8125 0L 31.6875 0L 31.6875 -1L 26.8125 -1L 26.8125 0ZM 36.5625 0L 41.4375 0L 41.4375 -1L 36.5625 -1L 36.5625 0ZM 46.3125 0L 51.1875 0L 51.1875 -1L 46.3125 -1L 46.3125 0ZM 56.0625 0L 60.9375 0L 60.9375 -1L 56.0625 -1L 56.0625 0ZM 65.8125 0L 70.6875 0L 70.6875 -1L 65.8125 -1L 65.8125 0ZM 75.5625 0L 80.4375 0L 80.4375 -1L 75.5625 -1L 75.5625 0ZM 85.3125 0L 90.1875 0L 90.1875 -1L 85.3125 -1L 85.3125 0ZM 95.0625 0L 99.9375 0L 99.9375 -1L 95.0625 -1L 95.0625 0ZM 104.812 0L 109.688 0L 109.688 -1L 104.812 -1L 104.812 0ZM 114.562 0L 119.438 0L 119.438 -1L 114.562 -1L 114.562 0ZM 124.312 0L 129.188 0L 129.188 -1L 124.312 -1L 124.312 0ZM 134.062 0L 138.938 0L 138.938 -1L 134.062 -1L 134.062 0ZM 143.812 0L 148.688 0L 148.688 -1L 143.812 -1L 143.812 0ZM 153.562 0L 156 0L 156 -1L 153.562 -1L 153.562 0Z")
-                        li
-                            div.circleAndLine
-                                div.circle
-                                svg(width="157" height="2" viewBox="0 0 157 1" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink")
-                                    path(id="path0_stroke" d="M 0 0L 2.4375 0L 2.4375 -1L 0 -1L 0 0ZM 7.3125 0L 12.1875 0L 12.1875 -1L 7.3125 -1L 7.3125 0ZM 17.0625 0L 21.9375 0L 21.9375 -1L 17.0625 -1L 17.0625 0ZM 26.8125 0L 31.6875 0L 31.6875 -1L 26.8125 -1L 26.8125 0ZM 36.5625 0L 41.4375 0L 41.4375 -1L 36.5625 -1L 36.5625 0ZM 46.3125 0L 51.1875 0L 51.1875 -1L 46.3125 -1L 46.3125 0ZM 56.0625 0L 60.9375 0L 60.9375 -1L 56.0625 -1L 56.0625 0ZM 65.8125 0L 70.6875 0L 70.6875 -1L 65.8125 -1L 65.8125 0ZM 75.5625 0L 80.4375 0L 80.4375 -1L 75.5625 -1L 75.5625 0ZM 85.3125 0L 90.1875 0L 90.1875 -1L 85.3125 -1L 85.3125 0ZM 95.0625 0L 99.9375 0L 99.9375 -1L 95.0625 -1L 95.0625 0ZM 104.812 0L 109.688 0L 109.688 -1L 104.812 -1L 104.812 0ZM 114.562 0L 119.438 0L 119.438 -1L 114.562 -1L 114.562 0ZM 124.312 0L 129.188 0L 129.188 -1L 124.312 -1L 124.312 0ZM 134.062 0L 138.938 0L 138.938 -1L 134.062 -1L 134.062 0ZM 143.812 0L 148.688 0L 148.688 -1L 143.812 -1L 143.812 0ZM 153.562 0L 156 0L 156 -1L 153.562 -1L 153.562 0Z")
-                        li
-                            div.circleAndLine
-                                div.circle
+            div.progress--bar
+                ul
+                    li Choose a template
+                    li Select Plugins
+                    li.bar--active Authorization
+                    li Download Site
         div.content.content--login
             div.login--container
                 h1 Login with
@@ -403,27 +358,12 @@ block content
                 span.step--count  Finish
 
             p Download the archive with your site and a set of plug-ins on your computer. Further instructions will tell you what to do next.
-            div.visual--steps
-                div.visual--steps-items
-                    ul.visual--indicators
-                        li
-                            div.circleAndLine
-                                div.circle.circle--active
-                                svg(width="157" height="2" viewBox="0 0 157 1" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink")
-                                    path(id="path0_stroke" d="M 0 0L 2.4375 0L 2.4375 -1L 0 -1L 0 0ZM 7.3125 0L 12.1875 0L 12.1875 -1L 7.3125 -1L 7.3125 0ZM 17.0625 0L 21.9375 0L 21.9375 -1L 17.0625 -1L 17.0625 0ZM 26.8125 0L 31.6875 0L 31.6875 -1L 26.8125 -1L 26.8125 0ZM 36.5625 0L 41.4375 0L 41.4375 -1L 36.5625 -1L 36.5625 0ZM 46.3125 0L 51.1875 0L 51.1875 -1L 46.3125 -1L 46.3125 0ZM 56.0625 0L 60.9375 0L 60.9375 -1L 56.0625 -1L 56.0625 0ZM 65.8125 0L 70.6875 0L 70.6875 -1L 65.8125 -1L 65.8125 0ZM 75.5625 0L 80.4375 0L 80.4375 -1L 75.5625 -1L 75.5625 0ZM 85.3125 0L 90.1875 0L 90.1875 -1L 85.3125 -1L 85.3125 0ZM 95.0625 0L 99.9375 0L 99.9375 -1L 95.0625 -1L 95.0625 0ZM 104.812 0L 109.688 0L 109.688 -1L 104.812 -1L 104.812 0ZM 114.562 0L 119.438 0L 119.438 -1L 114.562 -1L 114.562 0ZM 124.312 0L 129.188 0L 129.188 -1L 124.312 -1L 124.312 0ZM 134.062 0L 138.938 0L 138.938 -1L 134.062 -1L 134.062 0ZM 143.812 0L 148.688 0L 148.688 -1L 143.812 -1L 143.812 0ZM 153.562 0L 156 0L 156 -1L 153.562 -1L 153.562 0Z")
-                        li
-                            div.circleAndLine
-                                div.circle
-                                svg(width="157" height="2" viewBox="0 0 157 1" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink")
-                                    path(id="path0_stroke" d="M 0 0L 2.4375 0L 2.4375 -1L 0 -1L 0 0ZM 7.3125 0L 12.1875 0L 12.1875 -1L 7.3125 -1L 7.3125 0ZM 17.0625 0L 21.9375 0L 21.9375 -1L 17.0625 -1L 17.0625 0ZM 26.8125 0L 31.6875 0L 31.6875 -1L 26.8125 -1L 26.8125 0ZM 36.5625 0L 41.4375 0L 41.4375 -1L 36.5625 -1L 36.5625 0ZM 46.3125 0L 51.1875 0L 51.1875 -1L 46.3125 -1L 46.3125 0ZM 56.0625 0L 60.9375 0L 60.9375 -1L 56.0625 -1L 56.0625 0ZM 65.8125 0L 70.6875 0L 70.6875 -1L 65.8125 -1L 65.8125 0ZM 75.5625 0L 80.4375 0L 80.4375 -1L 75.5625 -1L 75.5625 0ZM 85.3125 0L 90.1875 0L 90.1875 -1L 85.3125 -1L 85.3125 0ZM 95.0625 0L 99.9375 0L 99.9375 -1L 95.0625 -1L 95.0625 0ZM 104.812 0L 109.688 0L 109.688 -1L 104.812 -1L 104.812 0ZM 114.562 0L 119.438 0L 119.438 -1L 114.562 -1L 114.562 0ZM 124.312 0L 129.188 0L 129.188 -1L 124.312 -1L 124.312 0ZM 134.062 0L 138.938 0L 138.938 -1L 134.062 -1L 134.062 0ZM 143.812 0L 148.688 0L 148.688 -1L 143.812 -1L 143.812 0ZM 153.562 0L 156 0L 156 -1L 153.562 -1L 153.562 0Z")
-                        li
-                            div.circleAndLine
-                                div.circle
-                                svg(width="157" height="2" viewBox="0 0 157 1" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink")
-                                    path(id="path0_stroke" d="M 0 0L 2.4375 0L 2.4375 -1L 0 -1L 0 0ZM 7.3125 0L 12.1875 0L 12.1875 -1L 7.3125 -1L 7.3125 0ZM 17.0625 0L 21.9375 0L 21.9375 -1L 17.0625 -1L 17.0625 0ZM 26.8125 0L 31.6875 0L 31.6875 -1L 26.8125 -1L 26.8125 0ZM 36.5625 0L 41.4375 0L 41.4375 -1L 36.5625 -1L 36.5625 0ZM 46.3125 0L 51.1875 0L 51.1875 -1L 46.3125 -1L 46.3125 0ZM 56.0625 0L 60.9375 0L 60.9375 -1L 56.0625 -1L 56.0625 0ZM 65.8125 0L 70.6875 0L 70.6875 -1L 65.8125 -1L 65.8125 0ZM 75.5625 0L 80.4375 0L 80.4375 -1L 75.5625 -1L 75.5625 0ZM 85.3125 0L 90.1875 0L 90.1875 -1L 85.3125 -1L 85.3125 0ZM 95.0625 0L 99.9375 0L 99.9375 -1L 95.0625 -1L 95.0625 0ZM 104.812 0L 109.688 0L 109.688 -1L 104.812 -1L 104.812 0ZM 114.562 0L 119.438 0L 119.438 -1L 114.562 -1L 114.562 0ZM 124.312 0L 129.188 0L 129.188 -1L 124.312 -1L 124.312 0ZM 134.062 0L 138.938 0L 138.938 -1L 134.062 -1L 134.062 0ZM 143.812 0L 148.688 0L 148.688 -1L 143.812 -1L 143.812 0ZM 153.562 0L 156 0L 156 -1L 153.562 -1L 153.562 0Z")
-                        li
-                            div.circleAndLine
-                                div.circle
+            div.progress--bar
+                ul
+                    li Choose a template
+                    li Select Plugins
+                    li Authorization
+                    li.bar--active Download Site
 
 
         div.content-finish
