--- a/projects/CaliforniaNews/app/sass/footer.sass
+++ b/projects/CaliforniaNews/app/sass/footer.sass
@@ -7,8 +7,7 @@ footer
     display: flex
     justify-content: center
     list-style: none
-    li
-      &:not(:last-child)
+    li:not(:first-child)
       margin-left: 40px
     a
       color: #4F4F4F
