--- a/projects/CaliforniaNews/app/sass/pages/steps.sass
+++ b/projects/CaliforniaNews/app/sass/pages/steps.sass
@@ -162,6 +162,10 @@
   transition: .4s ease
   svg
     fill: #3399FF
+  &:hover
+    .popup
+      opacity: 1
+      visibility: visible
 
 .back--forward
   margin: 80px auto 0 auto
