--- a/projects/CaliforniaNews/app/templates/index.jade
+++ b/projects/CaliforniaNews/app/templates/index.jade
@@ -14,9 +14,9 @@ block content
         div.jumbotron-wrapper
             .jumbo--images
                 .big--frame
-                    img(src="../images/jumbo/big-frame.png")
+                    img(src="../images/jumbo/big-frame.jpg")
                 .small--frame
-                    img(src="../images/jumbo/small-frame.png")
+                    img(src="../images/jumbo/small-frame.jpg")
             .jumbo--info
                 h1 Create beautiful news website and tell stories
                 .jumbo--info-buttons
