--- a/projects/CaliforniaNews/app/sass/header.sass
+++ b/projects/CaliforniaNews/app/sass/header.sass
@@ -11,7 +11,6 @@ header
     font-weight: bold
     font-size: 30px
     display: flex
-    align-items: center
     transition: .2s ease
     &:hover
       .logo span
@@ -29,6 +28,7 @@ header
       background-color: #3399FF
       border-radius: 8px
       transition: .2s ease
+      margin-top: 6px
       &:not(:first-child)
         margin-top: 4px
 .line-2
