--- a/projects/CaliforniaNews/app/templates/index.jade
+++ b/projects/CaliforniaNews/app/templates/index.jade
@@ -21,10 +21,10 @@ block content
                 h1 Create beautiful news website and tell stories
                 .jumbo--info-buttons
                     a(href="/steps.html").blueBtn + Create a webite
-                    a(href="#").howItWorks How it works
+                    a(href="#features").howItWorks How it works
 
         div.content
-            div.fetures
+            div.fetures#features
                 + features("Fast", "We have already selected the best templates and plug-ins for you", "bird")
                 + features("Simple", "Just choose the right ones for you", "wind")
                 + features("Flexible", "A set of templates covers all media options, from a blog to an information portal", "modules")
