--- a/projects/CaliforniaNews/app/templates/steps.jade
+++ b/projects/CaliforniaNews/app/templates/steps.jade
@@ -51,10 +51,10 @@ block content
                             li Authorization
                             li Download Site
                 section.content.content--tehemes
-                    +theme-card('cover1', 'Dayli insight', 'by Yam Chhetri', 'checked')
+                    +theme-card('cover1', 'Daily Insight', 'by Yam Chhetri', 'checked')
                     +theme-card('cover2', 'ProfitMag', 'by Rigorous Themes')
                     +theme-card('cover3', 'RainbowNews', 'by 99colorthemes')
-                    +theme-card('cover4', 'MH NewsMagazine', 'by MH Themes')
+                    +theme-card('cover4', 'Mercia', 'by MH Themes')
                     +theme-card('cover5', 'MeisterMag', 'by wpion')
                     +theme-card('cover6', 'SuperNews', 'by Acme Themes')
                     +theme-card('cover7', 'Metro Magazine', 'by Rara Theme')
@@ -349,8 +349,8 @@ block content
                                     label.label--form(for="email2") Email
                                     input(type="email" name="email" id="email2" required)
                                     div.no--account-wrapper
-                                        span No account ?
-                                        a.no-account(href="#") Sign Up with email
+                                        span Already have an account?
+                                        a.no-account(href="#") Sign In
                                 fieldset.form--set.login--form-password
                                     label.label--form(for="password2") Passwords
                                     input(type="password" name="password" id="password2" required)
@@ -385,10 +385,6 @@ block content
                                             label.label--form(for="siteName") Auto generated name
                                             input(type="text" name="siteName" value="SergiosVision" id="siteName" required)
                                 + backForward()
-
-                    section.content--whatsNext
-                        + contentTitle("What's next ?", "You don't need be a designer. We've developed a wide range of blocks. Contemporary look and high flexibility makes them handy and applicable for any kind of content. You don't need be a designer. We've developed a wide range of blocks. Contemporary look and high flexibility makes them handy and applicable for any kind of content.")
-                        + notes("Third note", "April 13, 2017", "Text block", "Text block", "This software is still in development, so we don’t recommend you run it on a production site. Consider setting up a test site just to play with the new version. To test WordPress 4.8, try the WordPress Beta Tester plugin (you’ll want “bleeding edge nightlies”). Or you can download the beta here (zip).", "For more information on what’s new in 4.8, check out the Beta 1 blog post. Since then, we’ve made over 50 changes in Beta 2.", "Do you speak a language other than English? Help us translate WordPress into more than 100 languages!")
 
 
 
