--- a/projects/CaliforniaNews/app/sass/pages/steps.sass
+++ b/projects/CaliforniaNews/app/sass/pages/steps.sass
@@ -14,11 +14,14 @@
     font-weight: normal
 
 .content--tehemes
-  display: flex
-  width: 1156px
-  justify-content: space-between
-  flex-wrap: wrap
-  margin-top: 65px
+  width: 100%
+  margin-top: 64px
+  form
+    display: flex
+    width: 1156px
+    justify-content: space-between
+    flex-wrap: wrap
+    margin: 0 auto
   .theme--card
     margin-bottom: 104px
     text-align: center
@@ -65,15 +68,16 @@
       position: relative
       img
         border-radius: 4px
+        display: block
       &::after
         content: ''
         width: 160px
         height: 83px
-        background: linear-gradient(to bottom, #3296FA, #fff)
+        background: linear-gradient(to bottom, rgba(50, 150, 250, 0.5) 0%, rgba(50, 151, 251, 0) 99.45%)
         display: block
         position: absolute
         left: 40px
-        bottom: -80px
+        bottom: -83px
         opacity: 0
         transition: .4s ease
     .blueBtn
@@ -290,7 +294,7 @@
   width: 770px
   margin: 0 auto
   z-index: 1
-  box-shadow: 0px 70px 80px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 70px 80px rgba(0, 0, 0, 0.3)
   img
     display: block
     width: 100%
