--- a/projects/CaliforniaNews/app/sass/content.sass
+++ b/projects/CaliforniaNews/app/sass/content.sass
@@ -2,6 +2,7 @@ main
   margin: 57px auto 0 auto
     //  width: 1294px
   width: 100%
+  position: relative
 
   .jumbotron-wrapper
     height: 680px
@@ -20,13 +21,13 @@ main
         height: auto
       .big--frame
         width: 100%
-        box-shadow: 0px 70px 80px rgba(0, 0, 0, 0.2)
+        box-shadow: 0 70px 80px rgba(0, 0, 0, 0.2)
       .small--frame
         width: 179px
         position: absolute
         top: 183px
         right: 89px
-        box-shadow: 0px 70px 80px rgba(0, 0, 0, 0.2);
+        box-shadow: 0 70px 80px rgba(0, 0, 0, 0.2)
   .jumbo--info
     width: 480px
     //    margin-left: 42px
@@ -50,7 +51,7 @@ main
   padding: 9px 31px
   border-radius: 20px
   text-align: center
-  box-shadow: 0px 16px 40px rgba(0, 0, 0, 0.1)
+  box-shadow: 0 16px 40px rgba(0, 0, 0, 0.1)
   transition: .4s ease
   &:hover
     background-color: #297ACC
@@ -104,6 +105,56 @@ main
   &:hover
     color: #3399FF
 
+
+.overlay
+  position: fixed
+  width: 100%
+  height: 100%
+  left: 0
+  top: 0
+  background-color: rgba(130, 130, 130, .6)
+  z-index: 50
+  opacity: 0
+  visibility: hidden
+  transition: .5s ease
+
+.fixed
+  overflow: hidden
+
+.show--modal .overlay,
+.show--modal .small--modal-wrapper
+  visibility: visible
+  opacity: 1
+
+.show--modal .small--modal-wrapper
+  transform: none
+  visibility: visible
+  opacity: 1
+
+.small--modal-wrapper
+  position: fixed
+  left: 0
+  top: 0
+  right: 0
+  bottom: 0
+  width: 322px
+  height: 278px
+  background-color: #fff
+  padding: 40px 40px 0
+  border-radius: 8px
+  margin: auto
+  z-index: 50
+  visibility: hidden
+  opacity: 0
+  transition: .5s ease
+  transform: translateY(-3000px)
+  h1
+    font-size: 26px
+    text-align: center
+  .send-link
+    margin-top: 32px
+    .blueBtn
+      width: 100%
 
 .content
   width: 1022px
