--- a/projects/CaliforniaNews/app/sass/pages/account.sass
+++ b/projects/CaliforniaNews/app/sass/pages/account.sass
@@ -68,3 +68,25 @@
         height: 340px
         border: 1px dashed #E5E5E5
         border-radius: 4px
+
+.content--account-reset
+  border: none
+  display: flex
+  flex-direction: column
+  margin-top: 16px
+  label
+    color: #BDBDBD
+    font-size: 12px
+    font-weight: normal
+  input
+    border: none
+    margin-top: 8px
+    font-size: 14px
+    font-weight: normal
+    color: #4F4F4F
+  .iremember--account-wrapper
+    margin-top: 16px
+    .iremember--account
+      font-size: 12px
+      color: #3399FF
+      font-family: Futura
