--- a/projects/CaliforniaNews/app/templates/index.jade
+++ b/projects/CaliforniaNews/app/templates/index.jade
@@ -24,6 +24,7 @@ block content
                     a(href="#features").howItWorks How it works
 
         div.content
+            h1.features--heading Features
             div.fetures#features
                 + features("Fast", "We have already selected the best templates and plug-ins for you", "bird")
                 + features("Simple", "Just choose the right ones for you", "wind")
