--- a/projects/CaliforniaNews/app/sass/content.sass
+++ b/projects/CaliforniaNews/app/sass/content.sass
@@ -30,7 +30,6 @@ main
         box-shadow: 0 70px 80px rgba(0, 0, 0, 0.2)
   .jumbo--info
     width: 480px
-    //    margin-left: 42px
     margin-top: 75px
     h1
       font-weight: bold
@@ -41,6 +40,13 @@ main
       margin-top: 20px
     .blueBtn
       margin-right: 32px
+
+.features--heading
+  text-transform: uppercase
+  font-size: 46px
+  color: #333333
+  text-align: center
+  margin-bottom: 33px
 
 .blueBtn
   display: inline-block
@@ -220,6 +226,40 @@ main
         width: 90%
         margin: 163px auto 0 auto
         padding: 0 20px
+
+@media (min-width: 769px) and (max-width: 979px)
+  .content--title
+    width: 100%
+  header
+    .navigation
+      display: none
+  main
+    .jumbotron-wrapper
+      width: 100%
+      margin: 0
+      height: auto
+      margin-top: 73px
+      padding: 0 30px
+      .jumbo--info
+        margin-bottom: 75px
+        margin-top: 30px
+        width: 370px
+        margin-left: 30px
+        h1
+          font-size: 36px
+        .jumbo--info-buttons
+          .blueBtn
+            font-size: 12px
+      .jumbo--images
+        width: 341px
+        .small--frame
+          width: 106px
+          right: 53px
+          top: 109px
+    .content
+      width: 90%
+      margin: 163px auto 0 auto
+      padding: 0 20px
 
 @media (min-width: 1600px)
   main
