--- a/projects/CaliforniaNews/app/sass/header.sass
+++ b/projects/CaliforniaNews/app/sass/header.sass
@@ -18,8 +18,8 @@ header
         width: 100% !important
   .logo
     width: 20px
-    height: 20px
-    margin: 0 8px
+    height: 27px
+    margin: 4px 8px 0
     transition: .4s ease
     span
       height: 4px
