--- a/projects/CaliforniaNews/app/sass/content.sass
+++ b/projects/CaliforniaNews/app/sass/content.sass
@@ -223,16 +223,85 @@ main
     .jumbo--images
         width: 450px!important
     .content
-        width: 90%
+        width: 100%
         margin: 163px auto 0 auto
-        padding: 0 20px
+        padding: 0 60px
+    .content--tehemes
+      padding: 0
+      margin-top: 64px
+      .theme--card
+        width: 240px
+        &:not(:first-child)
+          margin-left: 20px
+      .theme--form
+        width: 100%
+        margin: 0 auto
+        padding: 0 60px
+    .main--plugins-list
+        width: 34.33%
+        justify-content: center
+        margin-bottom: 42px
+        .category--item
+          margin: 0 auto
+    .plugins--container .plugins--category .category--title label
+        
 
 @media (min-width: 769px) and (max-width: 979px)
+  .hamburger
+    display: block
   .content--title
     width: 100%
   header
+    position: relative
     .navigation
-      display: none
+      position: absolute
+      flex-direction: column
+      height: auto
+      right: 16px
+      top: 24px
+      background-color: #fff
+      padding: 84px 42px 72px 42px
+      border: 1px solid #F2F2F2
+      z-index: 2
+      max-width: 320px
+      width: 0
+      height: auto
+      visibility: hidden
+      opacity: 0
+      border-radius: 100px
+      transition: .3s ease
+      transform: scale(.4)
+      transition-delay: .2s
+      &.show--mobile-nav
+        border-radius: 0
+        opacity: 1
+        visibility: visible
+        transform: scale(1)
+        width: 320px
+        transition-delay: 0s
+      &.show--mobile-nav li
+        opacity: 1
+        transition-delay: .2s
+      li
+        margin: 0!important
+        margin-bottom: 24px!important
+        text-align: center
+        opacity: 0
+        transition: .2s ease
+        &:first-child
+          margin-bottom: 32px!important
+        &:last-child
+          margin-bottom: 0!important
+        .create--site
+          display: inline-block
+          color: #fff
+          background-color: #3399FF
+          font-weight: bold
+          font-size: 16px
+          padding: 9px 31px
+          border-radius: 20px
+          text-align: center
+          box-shadow: 0 16px 40px rgba(0, 0, 0, 0.1)
   main
     .jumbotron-wrapper
       width: 100%
@@ -257,9 +326,9 @@ main
           right: 53px
           top: 109px
     .content
-      width: 90%
+      width: 100%
       margin: 163px auto 0 auto
-      padding: 0 20px
+      padding: 0 60px
 
 @media (min-width: 1600px)
   main
