--- a/projects/CaliforniaNews/app/sass/footer.sass
+++ b/projects/CaliforniaNews/app/sass/footer.sass
@@ -11,6 +11,7 @@ footer
     box-shadow: 0 0 0 0 rgba(51, 153, 255, .6)
     border-radius: 50%
     transition: .4s ease
+    z-index: 3
     svg
       fill: #3399FF
     &:hover
@@ -21,7 +22,7 @@ footer
   .popup--help-content
     width: 128px
     height: 110px
-    background-color: #cfcfca
+    background-color: #fff
     padding: 16px 16px 0 32px
     position: fixed
     right: 40px
@@ -30,7 +31,7 @@ footer
     transition: .4s ease
     visibility: hidden
     opacity: 0
-    box-shadow: 0px 8px 30px rgba(0, 0, 0, 0.05)
+    z-index: 4
     .circle--close
       cursor: pointer
       font-family: Futura
@@ -39,11 +40,11 @@ footer
       right: 0
       width: 56px
       height: 48px
-      background-color: #cfcfca
+      background-color: #fff
       border-radius: 0 0 50% 50%
-      box-shadow: 0px 8px 30px rgba(0, 0, 0, 0.05)
       display: flex
       justify-content: center
+      z-index: 4
       span
         font-size: 28px
         color: #4f4f4f
@@ -56,7 +57,7 @@ footer
       content: ''
       width: 22px
       height: 22px
-      background-color: #cfcfca
+      background-color: #fff
       position: absolute
       right: 56px
       bottom: -22px
