--- a/projects/CaliforniaNews/app/sass/header.sass
+++ b/projects/CaliforniaNews/app/sass/header.sass
@@ -58,3 +58,29 @@ header
 .profile
   svg
     fill: #3399FF
+
+.hamburger
+  width: 24px
+  height: 20px
+  cursor: pointer
+  transform: rotate(0deg)
+  transition: .3s ease
+  margin-left: 24px
+  align-self: center
+  display: none
+  z-index: 3
+  user-select: none
+  span
+    width: 100%
+    height: 4px
+    display: block
+    background-color: #4F4F4F
+    border-radius: 2px
+    left: 0
+    opacity: 1
+    transform: rotate(0deg)
+    transition: .25s ease
+    &:nth-child(2)
+      margin-top: 4px
+    &:nth-child(3)
+      margin-top: 4px
