--- a/projects/CaliforniaNews/app/templates/_layout.jade
+++ b/projects/CaliforniaNews/app/templates/_layout.jade
@@ -4,7 +4,7 @@ html(lang="en")
         meta(charset="utf-8")
         meta(http-equiv="Content-Type" content="text/html; charset=UTF-8")
         meta(name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0")
-        title California News
+        title California Internews
 
         link(rel='stylesheet', href="/css/main.min.css")
         link(rel='stylesheet', href="/css/fonts.css")
